objects/Inclusion_Details__c.object
<CustomObject>
    <fields>
        <fullName>Add_new_notes__c</fullName>
        <label>Add new notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_complete_MASI_call_back_time__c</fullName>
        <label>Additional complete MASI call back time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9am-1pm</fullName>
                </value>
                <value>
                    <fullName>1pm-5pm</fullName>
                </value>
                <value>
                    <fullName>5pm - 7pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_info_of_Asthma__c</fullName>
        <label>Additional info of Asthma</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_information_for_complete_MASI__c</fullName>
        <label>Additional information for complete MASI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - I have more information I would like to discuss with you</fullName>
                </value>
                <value>
                    <fullName>No  - Nothing has changed since I filled out the form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_of_Social_Key_Worker__c</fullName>
        <label>Address of Social/Key Worker</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_of_legal_guardian__c</fullName>
        <label>Address of legal guardian</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agree_to_food_epi_pen_consent__c</fullName>
        <label>Agree to food epi pen consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I agree</fullName>
                </value>
                <value>
                    <fullName>I do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_to_main_consent__c</fullName>
        <formula>Contact__r.Agree_to_main_consent_statement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agree to main consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_to_non_food_epi_pen_consent__c</fullName>
        <label>Agree to non-food epi pen consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I agree</fullName>
                </value>
                <value>
                    <fullName>I do not agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anaemia_details__c</fullName>
        <label>Anaemia details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_head_injuries__c</fullName>
        <label>Any head injuries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_infectious_dieseases__c</fullName>
        <label>Any infectious dieseases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_ongoing_weakness_risk__c</fullName>
        <description>Is there any on-going weakness or risk associated with this injury?</description>
        <label>Injury ongoing weakness/risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_other_behavioural_medical_info__c</fullName>
        <label>Any other behavioural/medical info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_prescribed_medication__c</fullName>
        <label>Any prescribed medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_the_legal_guardian__c</fullName>
        <label>Are you the legal guardian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Reserved_Cluster__c</fullName>
        <formula>IF( ISBLANK(Contact__r.Assigned_Wave__r.Wave_Cluster__r.Name ),
Contact__r.Reserved_Wave__r.Wave_Cluster__r.Name
,Contact__r.Assigned_Wave__r.Wave_Cluster__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/Reserved Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Reserved_Half_Cluster__c</fullName>
        <description>This field looks up and returns the Wave&apos;s Half Cluster on the YPs Assigned or Reserved Wave, or returns a null value if they are not Assigned or Reserved</description>
        <formula>IF( Contact__r.Assigned_Wave__c &lt;&gt; &quot;&quot;,  Contact__r.Assigned_Wave__r.Half_Clusters__r.Name  , IF( Contact__r.Reserved_Wave__c &lt;&gt; &quot;&quot;, Contact__r.Reserved_Wave__r.Half_Clusters__r.Name, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/Reserved Sub-Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_reserved_Wave_Id__c</fullName>
        <formula>IF(ISBLANK(Contact__r.Assigned_Wave__c),Contact__r.Reserved_Wave__c,Contact__r.Assigned_Wave__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/reserved Wave Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asthma_CCT_notes__c</fullName>
        <label>Asthma CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asthma_status__c</fullName>
        <formula>IF(
AND(OR(
ISPICKVAL( Does_the_YP_have_Asthma__c ,&quot;&quot;), 
ISPICKVAL(Severity_of_Asthma__c ,&quot;Severe&quot;)
)
,
OR( 
ISPICKVAL(Asthma_CCT_notes__c ,&quot;&quot;),ISPICKVAL(Asthma_CCT_notes__c ,&quot;CHECK&quot;),ISPICKVAL(Asthma_CCT_notes__c ,&quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asthma status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automate_to_SL_1_status_field_check_1__c</fullName>
        <formula>IF(AND(Main_consent_status__c = &quot;OK&quot;, Relationship_to_the_YP_Status__c  = &quot;OK&quot;, In_care_status__c= &quot;OK&quot;, Legal_Guardian_status__c= &quot;OK&quot;,GP_status__c = &quot;OK&quot;,  Tetanus_Swimming_Status__c = &quot;OK&quot;,Dietary_requirement_status__c  = &quot;OK&quot;,Food_allergies_status__c = &quot;OK&quot;, Non_food_allergy_status__c = &quot;OK&quot;,Ramadam_status__c= &quot;OK&quot;,Drs_treatment_status__c = &quot;OK&quot;,Injury_status__c = &quot;OK&quot;, Asthma_status__c = &quot;OK&quot; ), &quot;Part 1 OK&quot;, &quot;DO NOT AUTOMATE&quot;)</formula>
        <label>Automate to SL 1 status field check 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automate_to_SL_1_status_field_check_2__c</fullName>
        <formula>IF( AND(  Lung_condition_status__c  = &quot;OK&quot;,  Diabetes_status__c  = &quot;OK&quot;,  Pregnancy_status__c  = &quot;OK&quot;,  Migraine_status__c  = &quot;OK&quot;,  Epilepsy_status__c  = &quot;OK&quot;,  Fainting_status__c  = &quot;OK&quot;,  Infectious_disease_status__c  = &quot;OK&quot;,  Head_injury_status__c  = &quot;OK&quot;,  heart_status__c  = &quot;OK&quot;,  Blood_disorders_status__c  = &quot;OK&quot;,  Urinary_problem_status__c  = &quot;OK&quot;,  Stomach_problem_status__c  = &quot;OK&quot;,  restricted_mobility_Status__c  = &quot;OK&quot;  ) , 
&quot;Part 2 OK&quot;, &quot;DO NOT AUTOMATE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Automate to SL 1 status field check 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automate_to_SL_1_status_field_check_3__c</fullName>
        <formula>IF( AND(  Care_overnight_Status__c = &quot;OK&quot;,Physical_disability_status__c = &quot;OK&quot;,  Visual_impairment_status__c  = &quot;OK&quot;,  Hearing_impairment_status__c  = &quot;OK&quot;,  Medication_status__c  = &quot;OK&quot;,  Learning_difficulties_status__c  = &quot;OK&quot;,  Statement_of_SEN_Status__c  = &quot;OK&quot;,  Eating_disorder_status__c  = &quot;OK&quot;,  Mental_health_condition_status__c  = &quot;OK&quot;,  Substance_abuse_status__c  = &quot;OK&quot;) , 
&quot;Part 3 OK&quot;, &quot;DO NOT AUTOMATE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Automate to SL 1 status field check 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_to_Support_Level_1__c</fullName>
        <label>Automated to Support Level 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Automation_Replacement_Status_Check_5__c</fullName>
        <formula>IF ( 
ISPICKVAL( Support_Level__c , &quot;1 - no extra support&quot;) &amp;&amp; 
ISPICKVAL( NEET__c , &quot;Yes&quot;) &amp;&amp; 
ISNULL(P3_COMPLETE__c) &amp;&amp; 
(Automate_to_SL_1_status_field_check_4__c = &quot;Part 4 OK&quot;), 
&quot;Part 5 OK&quot;,&quot;DO NOT AUTOMATE&quot;)</formula>
        <label>Automation Replacement Status Check 5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Been_in_Custody_Further_Details__c</fullName>
        <label>Been in Custody: Further Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bladder_or_urinary_problems__c</fullName>
        <label>Bladder or urinary problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_disorders_CCT_notes__c</fullName>
        <label>Blood disorders CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_disorders_status__c</fullName>
        <formula>IF(

ISPICKVAL( Sickle_cell_status__c , &quot;Sickle cell trait&quot;)
,&quot;OK&quot;,
IF(
AND(

NOT( INCLUDES(Which_blood__c, &quot;None&quot; )),

OR(
ISPICKVAL(  Blood_disorders_CCT_notes__c ,&quot;&quot;),
ISPICKVAL(  Blood_disorders_CCT_notes__c ,&quot;CHECK&quot;),
ISPICKVAL(  Blood_disorders_CCT_notes__c ,&quot;CALL&quot;),
ISPICKVAL( Sickle_cell_crisis__c , &quot;Yes&quot;) 
)
)
,&quot;CHECK&quot;,&quot;OK&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blood disorders status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boundaries_CCT_notes__c</fullName>
        <label>Boundaries CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boundaries_status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(  Difficulty_adhering_to_rules_boundaries__c , &quot;&quot;),
ISPICKVAL(  Difficulty_adhering_to_rules_boundaries__c , &quot;Yes&quot;)
),
OR(
ISPICKVAL( Boundaries_CCT_notes__c ,&quot;&quot;),
ISPICKVAL( Boundaries_CCT_notes__c ,&quot;CHECK&quot;),
ISPICKVAL( Boundaries_CCT_notes__c ,&quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boundaries status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCT_P3_Notes__c</fullName>
        <label>CS MASI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCT_Self_Harm_Notes__c</fullName>
        <label>CS Self Harm Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCT_Skin_Condition_Notes__c</fullName>
        <label>CS Skin Condition Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCT_Skin_Condition_Status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(  Skin_condition__c  , &quot;&quot;),
ISPICKVAL(Skin_condition__c  , &quot;Other&quot;)
),
OR(
ISPICKVAL(  CCT_Skin_Condition_Notes__c  , &quot;&quot;),
ISPICKVAL(CCT_Skin_Condition_Notes__c  , &quot;CHECK&quot;),
ISPICKVAL( CCT_Skin_Condition_Notes__c  , &quot;CALL&quot;)
)
)
,&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Skin Condition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCT_lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This looks up the person in CCT that is leading on inclusion information for this YP</description>
        <label>CS lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inclusion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCT_status_notes__c</fullName>
        <label>CS status notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPLETE_and_support_level_is_correct__c</fullName>
        <inlineHelpText>Input date to confirm that we hav eall the inclusion information we need, logistical needs have been noted if necessary and the YPs support level is correct.</inlineHelpText>
        <label>COMPLETE! and support level is correct</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_actioned__c</fullName>
        <label>Call actioned?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_assigned_to__c</fullName>
        <label>Call assigned to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alex</fullName>
                </value>
                <value>
                    <fullName>Ami</fullName>
                </value>
                <value>
                    <fullName>Jess</fullName>
                </value>
                <value>
                    <fullName>John</fullName>
                </value>
                <value>
                    <fullName>Bethan</fullName>
                </value>
                <value>
                    <fullName>Natasha</fullName>
                </value>
                <value>
                    <fullName>Gemma</fullName>
                </value>
                <value>
                    <fullName>Amy</fullName>
                </value>
                <value>
                    <fullName>Temp 1</fullName>
                </value>
                <value>
                    <fullName>Temp 2</fullName>
                </value>
                <value>
                    <fullName>Temp 3</fullName>
                </value>
                <value>
                    <fullName>Temp 4</fullName>
                </value>
                <value>
                    <fullName>Temp 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the number of times that CCT have recorded calling this YP</description>
        <label>MASI Call count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_notes__c</fullName>
        <label>Call notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call resolved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_the_YP_swim_50m__c</fullName>
        <description>Can the young person swim 50 metres in light clothing</description>
        <label>Can the YP swim 50m (light clothing)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_of_legal_authority__c</fullName>
        <label>Capacity of legal authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_overnight_CCT_notes__c</fullName>
        <label>Care/overnight CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_overnight_Status__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL( personal_care_overnight_support__c , &quot;&quot;),
ISPICKVAL( personal_care_overnight_support__c , &quot;Yes&quot;)),
OR(
ISPICKVAL( Care_overnight_CCT_notes__c , &quot;&quot;),
ISPICKVAL( Care_overnight_CCT_notes__c , &quot;CHECK&quot;),
ISPICKVAL( Care_overnight_CCT_notes__c , &quot;CALL&quot;))),&quot;CHECK&quot;,&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care/overnight Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_method_preference__c</fullName>
        <description>This field reads from the communication method preference field on the contact object</description>
        <formula>TEXT(Contact__r.Communication_method_preference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication method preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_CCT_Status__c</fullName>
        <label>Consent CS Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_fo_epi_pen__c</fullName>
        <description>Do we have consent to use the epi pen on the YPs behalf.</description>
        <label>Consent for epi pen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Gap_Email_sent__c</fullName>
        <label>Contact Gap Email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>Contact__r.RecordType.Name</formula>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inclusion Details</relationshipLabel>
        <relationshipName>Inclusion_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_of_NCSMIContact_records__c</fullName>
        <label>Count of NCSMIContact records</label>
        <summaryFilterItems>
            <field>NCS_MI_Contact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Actual Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>NCS_MI_Contact__c.Inclusion_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Criminal_Justice_engagement__c</fullName>
        <label>Criminal Justice engagement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Criminal Record</fullName>
                </value>
                <value>
                    <fullName>Police Caution</fullName>
                </value>
                <value>
                    <fullName>Other criminal justice system contact</fullName>
                </value>
                <value>
                    <fullName>Been in custody</fullName>
                </value>
                <value>
                    <fullName>Supported by Youth Offending Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criminal_record_status__c</fullName>
        <formula>IF( 
AND(
OR(
INCLUDES( Criminal_Justice_engagement__c  , &quot;Criminal Record&quot;), 
INCLUDES( Criminal_Justice_engagement__c  , &quot;Police Caution&quot;), 
INCLUDES( Criminal_Justice_engagement__c  , &quot;Other criminal justice system contact&quot;),
 ISNULL(Criminal_Justice_engagement__c ) 
)
, 
OR( 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;&quot;), 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;CHECK&quot;), 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;CALL&quot;) 
) 
) 
,&quot;CHECK&quot;, 
IF( 
AND( 
ISPICKVAL( YP_in_contact_with_YOT__c , &quot;Yes&quot;), 
OR( 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;&quot;), 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;CHECK&quot;), 
ISPICKVAL( Crimnal_record_CCT_notes__c , &quot;CALL&quot;) 
) 
) 
,&quot;CHECK&quot;, 
&quot;OK&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criminal record status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crimnal_record_CCT_notes__c</fullName>
        <label>Criminal record CS notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK (AC)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT checked)</fullName>
                </value>
                <value>
                    <fullName>OK (CCT called)</fullName>
                </value>
                <value>
                    <fullName>OK (Inclusion letter sent)</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_APL_hold_meds_consent_sent__c</fullName>
        <label>Date APL hold meds consent sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Anaemia_Letter_Sent__c</fullName>
        <label>Date Anaemia Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Agent__c</fullName>
        <label>Date Assigned to Agent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Consent_only_form_sent__c</fullName>
        <label>Date Consent only form sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Diabetes_Letter_Sent__c</fullName>
        <label>Date Diabetes Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Doctors_note_sent__c</fullName>
        <label>Date Doctor&apos;s note sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Emergency_meds_consent_letter_sent__c</fullName>
        <label>Date Emergency meds consent letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Epi_pen_Letter_Sent__c</fullName>
        <label>Date Epi-pen Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_GP_Letter_Sent__c</fullName>
        <label>Date GP Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_MASI_consent_only_form_sent__c</fullName>
        <label>Date MASI &amp; consent only form sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_P3_Screened__c</fullName>
        <label>Date MASI Screened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_P3_form_started__c</fullName>
        <label>Date MASI form started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Passed_to_Staffing__c</fullName>
        <label>Date Passed to Staffing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Phone_consent_follow_up_sent__c</fullName>
        <label>Date Phone consent follow-up sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SL_workflow_triggered__c</fullName>
        <description>This is the date that the SL was first changed so that the workflows will only fire once.</description>
        <label>Date SL workflow triggered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SW_hold_medication_consent_sent__c</fullName>
        <label>Date SW hold medication consent sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Specialist_Note_Sent__c</fullName>
        <label>Date Specialist Note Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stomach_Bowel_Letter_Sent__c</fullName>
        <label>Date Stomach/Bowel Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_YP_in_care_letter_to_SW__c</fullName>
        <label>Date YP in care letter to SW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_call_to_be_done__c</fullName>
        <label>Date call to be done</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Check__c</fullName>
        <formula>Contact__r.Date_of_birth_check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Withdrawl_Notification__c</fullName>
        <formula>Contact__r.Date_of_YPPG_withdrawal_notification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Withdrawl Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_first_MASI_call_attempt__c</fullName>
        <label>Date of first MASI call attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_first_successful_MASI_call__c</fullName>
        <label>Date of first successful MASI call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_P3_follow_up__c</fullName>
        <label>Date of last MASI follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_payment_received_WF__c</fullName>
        <formula>Contact__r.Date_First_Payment_Received_Workflow__c</formula>
        <label>Date payment received (WF)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_between_screened_and_completed__c</fullName>
        <label>Days between screened and completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_screened_and_first_call__c</fullName>
        <formula>Date_P3_Screened__c  -  Date_of_first_successful_MASI_call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between screened and first call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>